# pepperbot

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: new.yml  publish.yml
html/: package-lock.json  package.json  tailwind.config.js  webpack.config.js
html/public/: index.html  manifest.json  robots.txt  sitemap.xml
src/: bot_commands.rs  bot_consumer.rs  main.rs  message_queuing.rs  webserver.rs
src/libs/: category.rs  middleware.rs  mod.rs  pepper_request.rs  redis.rs  redis_list.rs  redis_stream_client.rs  rss.rs  telegram.rs  variable.rs  version.rs
src/structs/: graphql_response.rs  message.rs  mod.rs
