[package]
name = "rust-pepperbot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "message-queuing"
path = "./src/message_queuing.rs"

[[bin]]
name = "bot-commands"
path = "./src/bot_commands.rs"

[[bin]]
name = "bot-consumer"
path = "./src/bot_consumer.rs"

[[bin]]
name = "webserver"
path = "./src/webserver.rs"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
env_logger = "0.10.0"
log = "0.4.17"
redis = "0.22.3"
regex = "1.7.3"
reqwest = "0.11.14"
rss = "2.0.2"
teloxide = { version = "0.12.2", features = ["macros"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
fuzzy-matcher = "0.3.7"
axum = "0.6.12"
axum-client-ip = "0.4.1"
include_dir = "0.7.3"
mime_guess = "2.0.4"
serde = "1.0.163"
serde_json = "1.0.96"
